--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,7 @@
         <item name="cornerSizeTopRight">50dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
     </style>
+    <style name="StatusBarStyle" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:statusBarColor">@color/verde</item>
+    </style>
 </resources>
